@@ -1,5 +1,6 @@
 Changes for 0.6.0:
 
+* Fixed issue #22: ra::filesystem::getFilenameWithoutExtension().
 * Fixed issue #23: ra::environment::getEnvironmentVariables().
 * Fixed issue #26: parseBoolean() and toString(bool).
 * Fixed issue #27: createFolder() fails with absolute path.
